<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.unknow0.model</groupId>
	<artifactId>unknow-model</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>Class model</description>
	<url>https://github.com/Unknow0/unknow-model</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Unknow0</name>
			<email>unknow0@free.fr</email>
			<organizationUrl>https://github.com/Unknow0</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/Unknow0/unknow-model.git</connection>
		<developerConnection>scm:git:ssh://github.com:Unknow0/unknow-model.git</developerConnection>
		<url>https://github.com/Unknow0/unknow-model</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.release>11</maven.compiler.release>

		<slf4j.version>2.0.13</slf4j.version>
		<javaparser.version>3.26.1</javaparser.version>
		<junit.version>5.10.3</junit.version>
	</properties>


	<modules>
		<module>unknow-model-api</module>
		<module>unknow-model-jvm</module>
		<module>unknow-model-ast</module>
		<module>unknow-model-bom</module>
		<module>unknow-model-simple</module>
		<module>unknow-model-test</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M7</version>
					<configuration>
						<systemPropertyVariables>
	         				<project.root>${project.basedir}</project.root>
	        			</systemPropertyVariables>
						<statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
							<disable>false</disable>
							<version>3.0</version>
							<usePhrasedFileName>false</usePhrasedFileName>
							<usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
							<usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
							<usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
						</statelessTestsetReporter>
						<consoleOutputReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
							<disable>false</disable>
							<encoding>UTF-8</encoding>
							<usePhrasedFileName>false</usePhrasedFileName>
						</consoleOutputReporter>
						<statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
							<disable>false</disable>
							<usePhrasedFileName>false</usePhrasedFileName>
							<usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
							<usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
						</statelessTestsetInfoReporter>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.4</version>
				</plugin>
				<plugin>
					<groupId>org.sonatype.central</groupId>
					<artifactId>central-publishing-maven-plugin</artifactId>
					<version>0.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.6.3</version>
					<executions>
						<execution>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.16.2</version>
					<configuration>
						<processDependencyManagementTransitive>false</processDependencyManagementTransitive>
						<ruleSet>
							<ignoreVersions>
								<ignoreVersion>
									<type>regex</type>
									<version>.+-(alpha|beta)-.+</version>
								</ignoreVersion>
								<ignoreVersion>
									<type>regex</type>
									<version>.+-(alpha|beta|rc|M)[0-9]*</version>
								</ignoreVersion>
							</ignoreVersions>
							<rules>
								<rule>
									<groupId>unknow.server</groupId>
									<ignoreVersions>
										<ignoreVersion>
											<type>regex</type>
											<version>.*</version>
										</ignoreVersion>
									</ignoreVersions>
								</rule>
							</rules>
						</ruleSet>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.javaparser</groupId>
				<artifactId>javaparser-core</artifactId>
				<version>${javaparser.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.javaparser</groupId>
				<artifactId>javaparser-symbol-solver-core</artifactId>
				<version>${javaparser.version}</version>
			</dependency>
		
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>deploy</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<bestPractices>true</bestPractices>
									<signer>bc</signer>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<extensions>true</extensions>
						<configuration>
							<deploymentName>${project.groupId}:${project.version}</deploymentName>
							<autoPublish>true</autoPublish>
							<waitUntil>published</waitUntil>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
